--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "5.0.0-beta2",
+    "bootstrap-icons": "^1.3.0",
     "jquery": "^3.5.1",
     "turbolinks": "^5.2.0"
   },
